@@ -131,6 +131,8 @@
         left: inherit;
         .dropdown-item {
             font-size: .8rem;
+            padding: .25rem 1rem;
+            outline: none;
             &:hover{
                 color: #000;
                 background-color: #ebecf0;
