@@ -5,8 +5,15 @@
     color: rgba(0, 0, 0, .7);
   }
 }
+.table{
+  .column {
+    font-size: .7rem;
+    padding: .25rem .3rem;
+    margin-left: .25rem;
+  }
+}
 .badge-default {
-  background-color: #ddd;
+  background-color: #ebecf0;
   color: #000;
 }
 .item-checkbox {
@@ -36,6 +43,19 @@
     &:hover {
       background-color: rgba(255,255,255, 0.4);
     }
+  }
+}
+
+.dropdown-menu{
+  position: absolute;
+  .dropdown-item{
+    font-size: .8rem;
+    padding: .25rem 1rem;
+    outline: none;
+    &:hover{
+      color: #000;
+      background-color: #ebecf0;
+  }
   }
 }
 
