@@ -277,6 +277,9 @@ ws-loading{
 .banned{
     cursor: not-allowed;
 }
+.default{
+    cursor: default;
+}
 // body{
 //     overflow: hidden;
 // }
